[tool.poetry]
name = "test-pulse-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-community = { path = "../libs/community", develop = true }
dozer-pulse-agent = {path = "../templates/dozer-pulse-agent", develop = true}
langchain-openai = "^0.1.3"
langchain-core = "^0.1.42"
pyyaml = "^6.0.1"
fastapi = "^0.110.1"
langchain-anthropic = "^0.1.8"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
